Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigPlusWithBadChars-45Chomped.calc
a .0E+%2 b 1.E+%2 c 2.3E+%3 d 34.5E+%4 e 6.78E+%7 f 99.99E+%5 g 3E+%9 h 76E+%4